--- a/app.json
+++ b/app.json
@@ -23,7 +23,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.developingdr3ams.rutabus",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
